# pytom-match-pick

./: .gitignore  .pre-commit-config.yaml  404.html  CITATION.cff  README.md  index.html  mkdocs.yml  pyproject.toml  search.json  setup.py  sitemap.xml  todo.txt
.github/: CODEOWNERS
.github/workflows/: coverage.yml  deploy-docs.yml  do-release.yml  tutorial-tests.yml  unit-tests.yml
Developers/: index.html
Frequently-asked-questions-(FAQ)/: index.html
Timings/: index.html
Usage/: index.html
benchmarks/: defocus_gradient_analysis.ipynb
benchmarks/defocus_handedness/: index.html
docs/: Creating-a-template-and-mask.md  Developers.md  Extracting-particles.md  Frequently-asked-questions-(FAQ).md  Home.md  Merging-annotations.md  Particle-handedness.md  Template-matching.md  Timings.md  Usage.md  index.md  test.md
docs/benchmarks/: defocus_gradient_analysis.ipynb  defocus_handedness.md
docs/tutorials/: Tutorial.md
docs/tutorials/tests/: test_tutorial.py
pytom/: job.py  parallel.py
search/: search_index.json
src/: structures.py
src/angles/: angles_11_15192.txt  angles_19.95_1944.txt  angles_25.25_980.txt  angles_50.00_100.txt  angles_90_2.txt
src/pytom_tm/: __init__.py  _utils.py  angles.py  correlation.py  data.py  dataclass.py  entry_points.py  extract.py  io.py  job.py  json.py  mask.py  matching.py  merge_stars.py  parallel.py  parallel_bak.py  plotting.py  structures.py  template.py  tmjob.py  utils.py  weights.py
src/pytom_tm/angle_lists/: angles_12.85_7112.txt  angles_18.00_3040.txt  angles_35.76_320.txt  angles_38.53_256.txt  angles_50.00_100.txt  angles_7.00_45123.txt  angles_90.00_26.txt  info.txt
tests/: 00_test_parallel.py  3D_CTF.mrc  localization.py  mask.py  template_matching.py  test00_parallel.py  test_angles.py  test_broken_imports.py  test_dataclass.py  test_entry_points.py  test_extract.py  test_io.py  test_json.py  test_logging.py  test_mask.py  test_merge.py  test_parallel.py  test_template.py  test_template_matching.py  test_tmjob.py  test_utils.py  test_weights.py  testing_utils.py  testzz_broken_imports.py
tests/Data/: header_only.mrc  job_v0.6.0.json  test_angles.rawtlt  test_angles_multi_column.rawtlt  test_defocus.txt  test_dose.txt  test_imod.defocus
tests/Data/relion5_project_example/Tomograms/job009/: tomograms.star
tests/Data/relion5_project_example/Tomograms/job009/tilt_series/: tomo200528_107.star
tests/Data/warptools_xml_example/: gs04_ts_003.xml
tutorials/Tutorial/: index.html
