[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pytom-match-pick"
version = "0.7.0"
description = "PyTOM's GPU template matching module as an independent package"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Marten Chaillet", email = "m.l.chaillet@uu.nl"},
    {name = "Sander Roet", email = "s.j.s.roet@uu.nl"}	
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: GPU :: NVIDIA CUDA",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed"
]
requires-python = ">= 3.9"
dependencies = [
    "numpy",
    "cupy",
    "voltools",
    "tqdm",
    "mrcfile",
    "starfile",
    "importlib_resources",
    "packaging",
    "scipy",
]

[project.optional-dependencies]
plotting = ["matplotlib", "seaborn"]

[project.scripts]
"pytom_create_mask.py" = "pytom_tm.entry_points:pytom_create_mask"
"pytom_create_template.py" = "pytom_tm.entry_points:pytom_create_template"
"pytom_match_template.py" = "pytom_tm.entry_points:match_template"
"pytom_extract_candidates.py" = "pytom_tm.entry_points:extract_candidates"
"pytom_merge_stars.py" = "pytom_tm.entry_points:merge_stars"
# as of writing setuptools does not obey entry-point spec here 
# ref: https://packaging.python.org/en/latest/specifications/entry-points/
# might fix itself in the future
"pytom_estimate_roc.py" = "pytom_tm.entry_points:estimate_roc [plotting]"

[project.urls]
Repository = "https://github.com/SBC-Utrecht/pytom-match-pick"
Issues = "https://github.com/SBC-Utrecht/pytom-match-pick/issues"

[tool.setuptools]
packages = ["pytom_tm", "pytom_tm.angle_lists"]
package-dir = {"" = "src"}
package-data = {"pytom_tm.angle_lists" = ["*.txt"]}

[tool.coverage.run]
concurrency = ["multiprocessing", "thread"]
parallel = true
